html build test

--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,27 @@
   </head>
   <body>
     <div class="container">
-      <h1>What's my age again?</h1>
+      <h1>Space Age</h1>
 
       <div class="forms">
-        <form id="date-input">
-          Age: <input id="user-input" type="text"> <button type="submit" name="button">Submit</button>
+        <p>Convert your age to seconds!</p>
+        <form id="age-form">
+          Age: <input id="age-input" type="text"> <button type="submit" name="button">Submit</button>
         </form>
       </div>
-
-
       <div class="results">
         <h3>Age in seconds: <span id="age-output"></span></h3>
       </div>
+
+      <div class="forms">
+        <form id="date-form">
+          Age: <input id="date-input" type="date"> <button type="submit" name="button">Submit</button>
+        </form>
+      </div>
+      <div class="results">
+        <h3>Age in seconds: <span id="date-output"></span></h3>
+      </div>
+
     </div>
   </body>
 </html>
