--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,25 @@
         <h3>Age in seconds: <span id="date-output"></span></h3>
       </div>
 
+      <div class="forms">
+        <p>Find out your age on a different planet!</p>
+        <form id="planet-form">
+        <!-- <form id="planet-age-form"> -->
+          Age: <input id="planet-age-input" type="text"> 
+        <!-- </form> -->
+          <select id="planet-input" name="planets">
+            <option value="Mercury">Mercury</option>
+            <option value="Venus">Venus</option>
+            <option value="Mars">Mars</option>
+            <option value="Jupiter">Jupiter</option>
+          </select>
+          <button type="submit" name="button">Submit</button>
+        </form>
+      </div>
+      <div class="results">
+        <h3>Age: <span id="planet-output"></span></h3>
+      </div>
+
     </div>
   </body>
 </html>
